--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>نظام مسح QR Code</title>
+
+    <!-- مكتبة jsQR لمسح QR Code -->
     <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.min.js"></script> 
+
+    <!-- خط Tajawal من Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
+
     <style>
         body {
             font-family: 'Tajawal', Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background: #f5f5f5;
+            background: #f5f5f5; 
             text-align: center;
         }
+
         .container {
             max-width: 800px;
             margin: 0 auto;
         }
+
         #scanner-container {
             width: 100%;
             max-width: 500px;
@@ -27,13 +34,16 @@
             border-radius: 8px;
             overflow: hidden;
         }
+
         #video {
             width: 100%;
             display: block;
         }
+
         #canvas {
             display: none;
         }
+
         .scanner-overlay {
             position: absolute;
             top: 0;
@@ -44,6 +54,7 @@
             border: 30px solid rgba(0,0,0,0.4);
             pointer-events: none;
         }
+
         .scanner-line {
             position: absolute;
             top: 0;
@@ -55,13 +66,16 @@
             animation: scan 2s infinite linear;
             pointer-events: none;
         }
+
         @keyframes scan {
             0% { top: 0; }
             100% { top: 100%; }
         }
+
         .controls {
             margin: 20px 0;
         }
+
         button {
             background: #4285F4;
             color: white;
@@ -72,13 +86,16 @@
             cursor: pointer;
             font-size: 16px;
         }
+
         button:disabled {
             opacity: 0.5;
             cursor: not-allowed;
         }
+
         #manual-input {
             margin: 20px 0;
         }
+
         #barcode-input {
             padding: 10px;
             width: 200px;
@@ -86,6 +103,7 @@
             border-radius: 5px;
             font-size: 16px;
         }
+
         #result {
             background: white;
             padding: 20px;
@@ -96,34 +114,41 @@
             text-align: right;
             display: none;
         }
+
         .product-field {
             margin-bottom: 15px;
             padding-bottom: 15px;
             border-bottom: 1px solid #eee;
         }
+
         .field-label {
             font-weight: bold;
             color: #4285F4;
             display: block;
             margin-bottom: 5px;
         }
+
         input.editable {
             width: 100%;
             padding: 5px;
             margin-top: 5px;
         }
+
         input[type="date"] {
             direction: ltr;
         }
+
         #edit-controls {
             margin-top: 15px;
         }
+
         #loading {
             display: none;
             margin: 20px;
             font-size: 18px;
             color: #4285F4;
         }
+
         #error-message {
             color: #EA4335;
             margin: 15px;
@@ -132,9 +157,11 @@
             background: rgba(234,67,53,0.1);
             display: none;
         }
+
         #export-pdf {
             background: #34A853;
         }
+
         .modal {
             display: none;
             position: fixed;
@@ -145,6 +172,7 @@
             height: 100%;
             background-color: rgba(0,0,0,0.4);
         }
+
         .modal-content {
             background-color: #fefefe;
             margin: 10% auto;
@@ -155,6 +183,7 @@
             border-radius: 8px;
             text-align: center;
         }
+
         .close {
             color: #aaa;
             float: left;
@@ -162,9 +191,11 @@
             font-weight: bold;
             cursor: pointer;
         }
+
         .close:hover {
             color: black;
         }
+
         #pdf-preview {
             width: 100%;
             height: 500px;
@@ -176,6 +207,8 @@
 <body>
     <div class="container">
         <h1>شركة جيزة العربية للأنظمة QR Code</h1>
+
+        <!-- منطقة الكاميرا -->
         <div id="scanner-container">
             <video id="video" playsinline></video>
             <canvas id="canvas"></canvas>
@@ -183,16 +216,26 @@
                 <div class="scanner-line"></div>
             </div>
         </div>
+
+        <!-- أزرار التحكم -->
         <div class="controls">
             <button id="start-btn">بدء المسح</button>
             <button id="stop-btn" disabled>إيقاف المسح</button>
         </div>
+
+        <!-- بحث يدوي -->
         <div id="manual-input">
             <input type="text" id="barcode-input" placeholder="أدخل الكود يدوياً">
             <button id="search-btn">بحث</button>
         </div>
+
+        <!-- حالة التحميل -->
         <div id="loading">جاري جلب البيانات...</div>
+
+        <!-- رسالة الخطأ -->
         <div id="error-message"></div>
+
+        <!-- نتائج البحث -->
         <div id="result">
             <h2 style="color: #4285F4; margin-top: 0;">تفاصيل المهمة</h2>
 
@@ -200,63 +243,79 @@
                 <span class="field-label">الموقع الوظيفي:</span>
                 <input type="text" class="editable field-value" id="functional-loc" disabled readonly>
             </div>
+
             <div class="product-field">
                 <span class="field-label">منطقة التغطية:</span>
                 <input type="text" class="editable field-value" id="covering-area" disabled>
             </div>
+
             <div class="product-field">
                 <span class="field-label">الوصف:</span>
                 <input type="text" class="editable field-value" id="description" disabled>
             </div>
+
             <div class="product-field">
                 <span class="field-label">وصف الفئة:</span>
                 <input type="text" class="editable field-value" id="category-desc" disabled>
             </div>
+
             <div class="product-field">
                 <span class="field-label">تاريخ آخر تفتيش:</span>
                 <input type="text" class="editable field-value" id="inspection-date" disabled>
             </div>
+
             <div class="product-field">
                 <span class="field-label">تاريخ آخر اختبار:</span>
                 <input type="text" class="editable field-value" id="testing-date" disabled>
             </div>
+
             <div class="product-field">
                 <span class="field-label">منطقة التشغيل:</span>
                 <input type="text" class="editable field-value" id="operating-area" disabled>
             </div>
+
             <div class="product-field">
                 <span class="field-label">خط الأعمال:</span>
                 <input type="text" class="editable field-value" id="business-line" disabled>
             </div>
+
             <div class="product-field">
                 <span class="field-label">المدينة:</span>
                 <input type="text" class="editable field-value" id="city" disabled>
             </div>
+
             <div class="product-field">
                 <span class="field-label">S/s:</span>
                 <input type="text" class="editable field-value" id="ss" disabled>
             </div>
+
             <div class="product-field">
                 <span class="field-label">الرقم التسلسلي:</span>
                 <input type="text" class="editable field-value" id="serial-number" disabled>
             </div>
+
             <div class="product-field">
                 <span class="field-label">نوع الكائن:</span>
                 <input type="text" class="editable field-value" id="object-type" disabled>
             </div>
+
             <div class="product-field">
                 <span class="field-label">الموقع:</span>
                 <input type="text" class="editable field-value" id="location" disabled>
             </div>
+
             <div class="product-field">
                 <span class="field-label">القسم المالك:</span>
                 <input type="text" class="editable field-value" id="owning-dept" disabled>
             </div>
+
             <div class="product-field">
                 <span class="field-label">منطقة الأعمال+التشغيل:</span>
                 <input type="text" class="editable field-value" id="business-operating-area" disabled>
             </div>
         </div>
+
+        <!-- أزرار التحكم -->
         <div id="edit-controls">
             <button id="edit-btn">تعديل</button>
             <button id="save-btn" disabled>حفظ</button>
@@ -265,7 +324,7 @@
         </div>
     </div>
 
-    <!-- Modal for PDF Preview -->
+    <!-- نافذة عرض PDF -->
     <div id="pdf-modal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -275,11 +334,14 @@
         </div>
     </div>
 
+    <!-- JavaScript -->
     <script>
-        const API_URL = "https://script.google.com/macros/s/AKfycbyY6pPxfY5jjo2iF9EkeXsutjJwZzIRJ2oOSk1PnmQ0-_Xyl6VFVAeOz_lSfBNrHcGV/exec"; 
+        const API_URL = "https://script.google.com/macros/s/AKfycbz64ZRKa8AQ2PNOYn1v6fJtk1L96LlmYlzoQm27oirFcr-M3-SsaomUxbOBpxVASrev/exec";
+
         const video = document.getElementById('video');
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
+
         const startBtn = document.getElementById('start-btn');
         const stopBtn = document.getElementById('stop-btn');
         const searchBtn = document.getElementById('search-btn');
@@ -288,6 +350,7 @@
         const cancelBtn = document.getElementById('cancel-btn');
         const exportPdfBtn = document.getElementById('export-pdf');
         const downloadPdfBtn = document.getElementById('download-pdf');
+
         const barcodeInput = document.getElementById('barcode-input');
         const loading = document.getElementById('loading');
         const errorMsg = document.getElementById('error-message');
@@ -354,8 +417,8 @@
                 loading.style.display = "block";
                 const response = await fetch(API_URL, {
                     method: 'POST',
-                    body: JSON.stringify({ 
-                        barcode: currentBarcode, 
+                    body: JSON.stringify({
+                        barcode: currentBarcode,
                         data: updatedData,
                         action: "update"
                     })
@@ -383,8 +446,8 @@
                 loading.style.display = "block";
                 const response = await fetch(API_URL, {
                     method: 'POST',
-                    body: JSON.stringify({ 
-                        barcode: currentBarcode, 
+                    body: JSON.stringify({
+                        barcode: currentBarcode,
                         data: originalData,
                         action: "export_pdf"
                     })
@@ -428,7 +491,6 @@
         function convertToDateInputs() {
             const inspectionDateInput = document.getElementById('inspection-date');
             const testingDateInput = document.getElementById('testing-date');
-
             if (inspectionDateInput.type !== 'date') {
                 inspectionDateInput.type = 'date';
                 testingDateInput.type = 'date';
@@ -476,6 +538,7 @@
                 ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
                 const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
                 const code = jsQR(imageData.data, imageData.width, imageData.height);
+
                 if (code) {
                     stopBtn.click();
                     fetchData(code.data);
@@ -489,10 +552,15 @@
                 loading.style.display = "block";
                 errorMsg.style.display = "none";
                 resultDiv.style.display = "none";
+
                 const response = await fetch(`${API_URL}?barcode=${encodeURIComponent(barcode)}`);
                 const data = await response.json();
+
                 loading.style.display = "none";
-                if (data.status === "error") throw new Error(data.message);
+
+                if (data.status === "error") {
+                    throw new Error(data.message || "الباركود غير موجود");
+                }
 
                 originalData = {
                     "functional-loc": data["Functional Loc."],
@@ -511,6 +579,7 @@
                     "owning-dept": data["Owning Dept."],
                     "business-operating-area": data["Business+Operating Area"]
                 };
+
                 currentBarcode = barcode;
 
                 document.getElementById('functional-loc').value = data["Functional Loc."] || "";
