--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>نظام مسح QR Code</title>
-    <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -368,8 +368,7 @@
     </div>
 
     <script>
-        const API_URL = "https://script.google.com/macros/s/AKfycbxWF4m69QL_7RY03o90Jn4uqvmUSWRjFMThGp7TUkUb8FDBG4jeL_2d9WoTX7j1ViFm/exec"; 
-        const IMGBB_API_KEY = "6ecffd3e45da90b96112d1595746ebea";
+        const API_URL = "https://script.google.com/macros/s/AKfycbwXVJo6Ra7q-R7WpE6uDezHLUWhgioXH_cVOD1QCzGBV7Dmsdy8zPhlL-kA-jagBrkX/exec"; 
         const video = document.getElementById('video');
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
@@ -446,9 +445,8 @@
                     if (uploadedImages[i]) {
                         const formData = new FormData();
                         formData.append('image', uploadedImages[i]);
-                        formData.append('key', IMGBB_API_KEY);
                         
-                        const response = await fetch('https://api.imgbb.com/1/upload', {
+                        const response = await fetch('https://api.imgbb.com/1/upload?key=6ecffd3e45da90b96112d1595746ebea', {
                             method: 'POST',
                             body: formData
                         });
